tests/errors/trait-bound-unknown.ari
fn use_missing[T: MissingTrait](value: T) -> i64 {
  return 0;
}

fn main() -> i64 {
  return use_missing<i64>(1);
}
